# min_renovasjon_py

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
min_renovasjon/: __init__.py  main.py  minrenovasjon.py  setup.py
minrenovasjon/: __init__.py  constants.py  minrenovasjon.py
minrenovasjon/tests/: minrenovasjon_tests.py
tests/: test_min_renovasjon.py
