[tool.poetry]
name = "min-renovasjon"
version = "0.1.2"
description = "A Python3 API for Min Renovasjon"

authors = ["Knut Flage Henriksen <post@flaksen.com>"]

license = "Apache-2.0"

readme = 'README.md'

repository = 'https://github.com/knutfh/min_renovasjon_py'
homepage = 'https://github.com/knutfh/min_renovasjon_py'

classifiers= [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License"
]


[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
requests-mock = "^1.10.0"
pytest = "^7.2.0"

[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry>=1.2.2"]
build-backend = "poetry.masonry.api"
